Update UI: adjust homepage and footer layout

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,44 +3,42 @@
       <div class="row">
         <div class="col-xl-5 mb-8 mb-xl-0">
           <div class="d-flex flex-column gap-8 pe-xl-5">
-            <h2 class="mb-0 text-white">Build something together?</h2>
+            <h2 class="mb-0 text-white">Cổng thông tin học tập</h2>
             <div class="d-flex flex-column gap-2">
-              <a href="https://www.wrappixel.com/" target="_blank" class="link-hover hstack gap-3 text-white fs-5">
+              <a href="https://www.facebook.com/nhubapdon" target="_blank" class="link-hover hstack gap-3 text-white fs-5">
                 <iconify-icon icon="lucide:arrow-up-right" class="fs-7 text-primary"></iconify-icon>
-                info@wrappixel.com
+                Facebook
               </a>
-              <a href="https://maps.app.goo.gl/hpDp81fqzGt5y4bC8" target="_blank"
+              <a href="https://maps.app.goo.gl/HaFyzU8uBhXv93yr7" target="_blank"
                 class="link-hover hstack gap-3 text-white fs-5">
                 <iconify-icon icon="lucide:map-pin" class="fs-7 text-primary"></iconify-icon>
-                info@wrappixel.com
+                Địa chỉ
               </a>
             </div>
           </div>
         </div>
         <div class="col-md-4 col-xl-2 mb-8 mb-xl-0">
           <ul class="footer-menu list-unstyled mb-0 d-flex flex-column gap-2">
-            <li><a class="link-hover fs-5 text-white" href="index.html">Home</a></li>
-            <li><a class="link-hover fs-5 text-white" href="about-us.html">About</a></li>
-            <li><a class="link-hover fs-5 text-white" id="services" href="#services">Services</a></li>
-            <li><a class="link-hover fs-5 text-white" href="projects.html">Work</a></li>
-            <li><a class="link-hover fs-5 text-white" href="terms-and-conditions.html">Terms</a></li>
-            <li><a class="link-hover fs-5 text-white" href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a class="link-hover fs-5 text-white" href="404.html">Error 404</a></li>
+            <li><a class="link-hover fs-5 text-white" href="/">Trang chủ</a></li>
+            <li><a class="link-hover fs-5 text-white" href="/cousres">Khóa học</a></li>
+            <li><a class="link-hover fs-5 text-white" id="services" href="/my-cousres">Khóa học của tôi</a></li>
+            <li><a class="link-hover fs-5 text-white" href="/blog">Diễn đàn học tập</a></li>
+
           </ul>
         </div>
         <div class="col-md-4 col-xl-2 mb-8 mb-xl-0">
           <ul class="footer-menu list-unstyled mb-0 d-flex flex-column gap-2">
-            <li><a class="link-hover fs-5 text-white" href="#!">Facebook</a></li>
-            <li><a class="link-hover fs-5 text-white" href="#!">Instagram</a></li>
-            <li><a class="link-hover fs-5 text-white" href="#!">Twitter</a></li>
+            <li><a class="link-hover fs-5 text-white" href="#!">ĐẠI HỌC TÀI NGUYÊN VÀ MÔI TRƯỜNG</a></li>
+            <li><a class="link-hover fs-5 text-white" href="#!">Hệ thống thông tin</a></li>
+            <li><a class="link-hover fs-5 text-white" href="#!">Trần Minh Như - 1050070042</a></li>
           </ul>
         </div>
         <div class="col-md-4 col-xl-3 mb-8 mb-xl-0">
-          <p class="mb-0 text-white text-opacity-70 text-md-end">© Studiova copyright 2025</p>
+          <p class="mb-0 text-white text-opacity-70 text-md-end">© Trần Minh Như copyright 2025</p>
         </div>
       </div>
     </div>
-  <p class="mb-0 text-white text-opacity-70 text-md-center mt-10">Distributed by <a class="text-white" href="https://www.themewagon.com" target="_blank">ThemeWagon</a></p>
+
   </footer>
 
   <div class="get-template hstack gap-2">
